[package]
name = "anagram_wow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
phf = "0.11.2"
itertools = "0.12.1"
lazy_static = "1.4.0"
bitintr = "0.3.0"

[[bin]]
name = "anagram"
src = "src/bin/anagram.rs"

[[bin]]
name = "letterbank"
src = "src/bin/letterbank.rs"

[[bin]]
name = "anahook"
src = "src/bin/anahook.rs"

# [workspace]
# members = [
  # "lib/*",
  # "bin/*",
  # ]
