[package]
name = "anagram_wow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
itertools = "0.12.1"
lazy_static = "1.4.0"
fasthash = "0.4.0"
phf_macros = "0.11.2"

[build-dependencies]
phf = { version = "0.11.2", default-features = false }
phf_codegen = "0.11.1"

[[bin]]
name = "wow"
src = "src/bin/wow.rs"


# [workspace]
# members = [
  # "lib/*",
  # "bin/*",
  # ]
